part3/ex302/manifests/uuid-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uuid-app-http
  namespace: exercises
spec:
  selector:
    matchLabels:
      app: uuid-app-http
  template:
    metadata:
      labels:
        app: uuid-app-http
    spec:
      containers:
      - name: uuid-app-http
        image: deeq/uuid-app-http:latest
        ports:
        - containerPort: 8083
