part3/ex302/manifests/pong-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pong-app-http-service
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: pong-app-http
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8084
