part3/ex302/manifests/uuid-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: uuid-app-http-service
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: uuid-app-http
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8083
